<resources>
    <string name="app_name">digital outlet officer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="forget_password">Lupa kata sandi?</string>
    <string name="call_cs">Hubungi CS</string>
    <string name="invisible_password">********</string>
    <string name="visible_password">Masukan kata sandi</string>
    <string name="exit">Keluar</string>
    <string name="cancel">Batal</string>
    <string name="exit_message">Anda yakin ingin keluar?</string>
    <string name="sycn">Sync</string>
    <string name="sync_on_progress">Sedang melakukan singkronisasi</string>
    <string name="search_cannot_empty">Pencarian tidak boleh kosong</string>
    <string name="search_cannot_less_than_two">Pencarian harus lebih dari dua karakter</string>
    <string name="done">Selesai</string>
    <string name="delay">Tertunda</string>
    <string name="queue">Antrian</string>
    <string name="number_of_queue">Jumlah \nantrian</string>
    <string name="current_queue">Antrian sekarang</string>
    <string name="number_queue">No. antrian</string>
    <string name="skip_queue_number">Skip antrian</string>
    <string name="skip">Skip</string>
    <string name="ritase_title">Pencatat ritase</string>
    <string name="ritase_message">Masukan nomor lambung taxi penjemputan untuk mencatat ritase</string>
    <string name="hint_ritase">KK1204</string>
    <string name="note_ritase">Catat ritase</string>
    <string name="restore">Restore</string>
    <string name="waiting">Menunggu</string>
    <string name="search_number_queue_hint">Cari no. antrian</string>
    <string name="password_cannot_empty">Password tidak boleh kosong</string>
    <string name="username_cannot_empty">Username tidak boleh kosong</string>
    <string name="ritase">Ritase</string>
    <string name="number_queue_message">no. antrian</string>
    <string name="number_queue_message_caps">No. antrian</string>
    <string name="restore_queue_number">Restore antrian</string>
    <string name="success_note">telah tercatat</string>
    <string name="delay_success">telah ditunda</string>
    <string name="restore_success">telah direstore</string>
    <string name="user_not_found">User tidak ditemukan</string>
    <string name="error_is_unknown">Error tidak dikenali</string>
    <string name="connection_not_found">Anda belum terhubung..</string>
    <string name="current_cannot_empty">Antrian sekarang tidak boleh kosong</string>
    <string name="queue_not_found">Antrian tidak ditemukan</string>
    <string name="vsm_pangkalan">Vsm Pangkalan</string>
    <string name="fleet_queue">Antrian armada</string>
    <string name="monitor">Pemantauan</string>
    <string name="user_setting">Pengaturan pengguna</string>
    <string name="session_invalid_message">Session Invalid</string>
</resources>