<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="logoutViewModel"
            type="id.bluebird.mall.officer.logout.LogoutDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_dialog"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/text_button_seed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_message"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/text_button_seed">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_weight="1"
                android:id="@+id/btn_cancel_bottom_sheet_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/bg_cancel_bottom_sheet_action"
                android:text="@string/cancel"
                android:onClick="@{()->logoutViewModel.cancelDialog()}"
                android:textAllCaps="false"
                android:textColor="@color/primary_color" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:id="@+id/btn_proses_bottom_sheet_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_enable_login"
                android:text="@string/exit"
                android:onClick="@{()->logoutViewModel.prosesDialog()}"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>