<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="dialog"
            type="android.app.Dialog" />

        <variable
            name="vm"
            type="id.bluebird.mall.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_note_ritase_dialog"
        android:padding="@dimen/sixty_dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_cancel_ritase"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/ll_main_body_d_ritase"
            app:cancelDialogRitase="@{dialog}"
            android:src="@drawable/ic_cross_disable"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_main_body_d_ritase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imv_cancel_ritase">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_ritase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/ritase_title"
                android:textColor="@color/gray_subtitle"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_message_ritase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/ritase_message" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_search_queue_home"
                android:hint="@string/hint_ritase"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingStart="@dimen/sixty_dp"
                android:paddingEnd="@dimen/sixty_dp"
                android:text="@={vm.taxiNumber}" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_note_ritase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_button_enable_login"
                android:enabled="@{vm.taxiNumber.length() > 0}"
                android:fontFamily="@font/ubuntu_bold"
                android:onClick="@{() ->vm.submitRitaseDialog()}"
                android:text="@string/note_ritase"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sixty_sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
