<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="id.bluebird.mall.login.LoginViewModel" />

        <import type="android.text.InputType" />

        <import type="id.bluebird.mall.login.LoginState" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_parent_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:viewBindingIgnore="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_main_body_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:paddingStart="@dimen/sixty_dp"
            android:paddingEnd="@dimen/sixty_dp"
            app:layout_constraintBottom_toTopOf="@+id/cl_version_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imv_logo_login"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="@dimen/thirty_six_dp"
                android:src="@drawable/ic_logo_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_username_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/thirty_two_dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imv_logo_login">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/sixty_dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/title_logo"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/eight_dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/username"
                    android:textColor="@color/gray_subtitle"
                    android:textSize="@dimen/text_size" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_editext_disable"
                    android:hint="Budi"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="32"
                    android:maxLines="1"
                    android:paddingStart="@dimen/sixty_dp"
                    android:paddingEnd="@dimen/sixty_dp"
                    android:text="@={vm.username}"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixty_dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_username_login">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/eight_dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/password"
                    android:textColor="@color/gray_subtitle"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_editext_disable"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="9"
                        android:background="@null"
                        android:hint="@{vm.visibilityPassword? @string/visible_password : @string/invisible_password}"
                        android:imeOptions="actionDone"
                        android:inputType="@{vm.visibilityPassword ? InputType.TYPE_TEXT_VARIATION_VISIBLE_PASSWORD : InputType.TYPE_TEXT_VARIATION_PASSWORD | InputType.TYPE_CLASS_TEXT}"
                        android:lines="1"
                        android:maxLength="32"
                        android:maxLines="1"
                        android:paddingStart="@dimen/sixty_dp"
                        android:paddingEnd="@dimen/sixty_dp"
                        android:text="@={vm.password}"
                        app:setCursorLastPosition="@{vm.password}" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:padding="4dp"
                        android:tag="0"
                        app:passwordToggle="@{vm}" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_password_login">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:show="@{(vm.loginState instanceof LoginState.LoginProgress)}" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button_enable_login"
                    android:fontFamily="@font/ubuntu_regular"
                    android:onClick="@{() -> vm.login()}"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sixty_sp"
                    app:password="@{vm.password}"
                    app:show="@{!(vm.loginState instanceof LoginState.LoginProgress)}"
                    app:username="@{vm.username}" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_call_cs_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixty_dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_btn_login">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/forget_password"
                    android:textColor="@color/gray_subtitle"
                    android:textSize="@dimen/sixty_sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/eight_dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:onClick="@{() -> vm.callPhone()}"
                    android:text="@string/call_cs"
                    android:textColor="@color/primary_color"
                    android:textSize="@dimen/sixty_sp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_version_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_color"
                android:scaleType="fitXY"
                android:src="@drawable/no"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_version_name_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@{vm.version}"
                android:textColor="@color/white"
                android:textSize="@dimen/sixty_sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
